@startuml AudioSm

    '############################ States ############################

    [*] --> IDLE

    state IDLE
    state READY
    state LOADING
    state PLAYING
    state PAUSED
    state TEXT_DISPLAYED

    '############################ Handlers ############################

    IDLE: enter / resetAllAudio(); uiIdle(); hideLoadingAnimation();
    IDLE --> READY : FORM_NOT_EMPTY [inputNotEmpty()]
    IDLE --> LOADING : FORM_SUBMITTED [inputNotEmpty()] / startNewStoryProcess();
    IDLE --> LOADING : PLAY_PAUSE_CLICKED [inputNotEmpty()] / startNewStoryProcess();

    READY: enter / uiReadyButtons();

    LOADING: enter / showLoadingAnimation(); uiLoadingButtons();
    LOADING --> PLAYING : SPEECH_READY
    LOADING --> PAUSED : PLAY_PAUSE_CLICKED / pauseAllAudio();
    LOADING --> IDLE : CANCEL / abortProcess(); pauseAllAudio(); resetAllAudio();

    PLAYING: enter / uiPlayingButtons(); removeBlurr(); redDots();
    PLAYING --> PAUSED : PLAY_PAUSE_CLICKED / pauseAllAudio();
    PLAYING --> LOADING : [inputNotEmpty()] / startNewStoryProcess();
    PLAYING --> IDLE : MUSIC_OVER
    PLAYING --> PLAYING : FROM_START_CLICKED / resetAllAudio; setupAndStartAllAudio;

    PAUSED: enter / uiPausedButtons(); addBlur();
    PAUSED --> PLAYING : PLAY_PAUSE_CLICKED / resumeAllAudio();
    PAUSED --> PLAYING : FROM_START_CLICKED / resetAllAudio(); setupAndStartAllAudio();
    PAUSED --> PAUSED : FROM_START_CLICKED / resetAllAudio();

    TEXT_DISPLAYED: enter / SPEECH_OVER / displayRelatedSubjects();

/'! $CONFIG : toml
SmRunnerSettings.transpilerId = "JavaScript"
'/
@enduml
